# templates

./: .gitignore  README.md  setup.cfg
python-flask-server/: .gitignore  setup.cfg
python-flask-server/src/server/: api.py  app.py  cli.py
python-flask-server/tests/server/: flask_test.py
python-lib/: setup.cfg
python-lib/src/x_x/splashes/: cat.txt
python-lib/tests/x_x/: x_x_test.py
python-sanic-server/: README.md  setup.cfg
python-sanic-server/src/server/: app.py  cli.py
python-sanic-server/src/server/static/: index.html
python-sanic-server/src/x_x/: cli.py
python-sanic-server/src/x_x/splashes/: tails.txt
python-sanic-server/tests/server/: server_test.py
src/x_x/: __init__.py  cli.py
src/x_x/splashes/: sword.txt
tests/x_x/: cli_test.py
