[metadata]
name = x_x
version = 1.0.0
author = Matt <3
author_email = matt@worldshadowgovernment.com
url = https://github.com/whatever/x_x
description = wip
long_description = file: README.md
long_description_content_type = text/markdown
keywords = x_x
license = UNLICENSED
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
install_requires =
  pytest==7.4.3

[options.packages.find]
where = src
exclude =
    examples*
    tools*
    docs*
    x_x.tests*

[options.entry_points]
console_scripts = 
    x_x = x_x.cli:main

[options.package_data]
# example = data/schema.json, *.txt
# * = README.md
