[metadata]
name = x_x
version = 1.0.0
author = Matt <3
author_email = matt@worldshadowgovernment.com
url = https://github.com/whatever/x_x
description = wip
long_description = file: README.md
long_description_content_type = text/markdown
keywords = x_x
license = UNLICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: UNLICENSE

[options]
package_dir =
  = src
packages = find:
install_requires =

[options.packages.find]
where = src
exclude =
  examples*
  tools*
  docs*
  x_x.tests*

[options.entry_points]
console_scripts = 
  x_x = x_x.cli:main

[options.package_data]
* = README.md

[options.extras_require]
dev =
  pytest >= 7.0.0
  flake8 >= 7.0.0

[flake8]
max-line-length = 120

