[metadata]
name = server
version = 1.0.0
author = Matt <3
author_email = matt@worldshadowgovernment.com
url = https://github.com/whatever/templates/
description = x_x
long_description = file: README.md
long_description_content_type = text/markdown
keywords = x_x
license = UNLICENSED
classifiers =
  Programming Language :: Python :: 3

[options]
package_dir =
  = src
packages = find:
install_requires =
  Flask >= 3.0.2 
  Flask-Login >= 0.6.3 
  Flask-SQLAlchemy >= 3.1.1 
  gunicorn >= 21.2.0 

[options.packages.find]
where = src
exclude =
  examples*
  tools*
  docs*
  x_x.tests*

[options.entry_points]
console_scripts = 
  server = server.cli:main
  # x_x = x_x.cli:main
  # knockknock = knock_knock.cli:main
  # knock = knock_knock.cli:register

[options.package_data]
* = README.md

[options.extras_require]
dev =
  pyright >= 1.1.0
  pytest >= 7.0.0
  flake8 >= 7.0.0

[flake8]
max-line-length = 120

