[metadata]
name = x_x
version = 1.0.0
author = Matt <3
author_email = matt@worldshadowgovernment.com
url = https://github.com/whatever/templates/
description = gotta go fast
long_description = file: README.md
long_description_content_type = text/markdown
keywords = x_x
license = UNLICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: UNLICENSE

[options]
package_dir =
  = src
packages = find:
install_requires =
  python-socketio[asyncio_client] >= 5.11.2 
  sanic >= 23.12.1 

[options.packages.find]
where = src
exclude =
  examples*
  tools*
  docs*
  x_x.tests*

[options.entry_points]
console_scripts = 
  gotta-go-fast = server.cli:main

[options.package_data]
* = README.md

[options.extras_require]
dev =
  flake8 >= 7.0.0
  pyright >= 1.1.0
  pytest >= 7.0.0
  pytest-asyncio >= 0.23.6 
  sanic-testing >= 23.12.0 

[flake8]
max-line-length = 120

